--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/HackYourFutureBelgium/separation-of-concerns#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@types/jest": "^29.5.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.3.2"
